Show where the user clicks

--- a/ShowWhereClicks.html
+++ b/ShowWhereClicks.html
@@ -49,8 +49,7 @@ L.geoJSON(geojsonFeature).addTo(mymap).bindPopup("<b>"+geojsonFeature.properties
 // create a custom popup
 var popup = L.popup();
 // create an event detector to wait for the user's click event and then use the popup to show them where they clicked
-// note that you don't need to do any complicated maths to convert screen coordinates to real world
-coordiantes - the Leaflet API does this for you
+// note that you don't need to do any complicated maths to convert screen coordinates to real world coordiantes - the Leaflet API does this for you
 function onMapClick(e) {
 popup
 .setLatLng(e.latlng)
