--- a/CustomIcon.html
+++ b/CustomIcon.html
@@ -1,15 +1,17 @@
 <html>
 <head>
-<!-- the following links incorporate the CSS required for custom icon creation -->
-<link rel="stylesheet" href="ionicons.min.css">
+<title>Leaflet and Javascript Example</title>
+<!--the following links add the CSS and Javascript required for the Leaflet Map-->
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.1.0/dist/leaflet.css"
 integrity="sha512-wcw6ts8Anuw10Mzh9Ytw4pylW8+NAD4ch3lqm9lzAsTxg0GFeJgoAtxuCLREZSC5lUXdVyo/7yfsqFjQ4S+aKw=="
 crossorigin=""/>
+<!-- the following links incorporate the CSS required for custom icon creation -->
+<link rel="stylesheet" href="ionicons.min.css">
 <link rel="stylesheet" href="leaflet.awesome-markers.css">
-<script src="leaflet.awesome-markers.js"></script>
 <script src="https://unpkg.com/leaflet@1.1.0/dist/leaflet.js"
 integrity="sha512-mNqn2Wg7tSToJhvHcqfzLMU6J4mkOImSPTxVZAdo+lcPlk+GhZmYgACEe0x35K7YzW1zJ7XyJV/TT1MrdXvMcA=="
 crossorigin=""></script>
+<script src="leaflet.awesome-markers.js"></script>
 <!-- the following CSS is used to set the size of the Map -->
 <style type="text/css">
 #mapid { height: 180px; }
@@ -31,14 +33,25 @@ attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</
 'Imagery © <a href="http://mapbox.com">Mapbox</a>',
 id: 'mapbox.streets'
 }).addTo(mymap);
-</script>
-<script>
+
+var geojsonFeature = {
+"type": "Feature",
+"properties": {
+"name": "London",
+"popupContent": "This is where UCL is based"
+},
+
+"geometry": {
+"type": "Point",
+"coordinates": [-0.132630, 51.522450]
+}
+};
+// and add it to the map
+L.geoJSON(geojsonFeature).addTo(mymap).bindPopup("<b>"+geojsonFeature.properties.name+" "+geojsonFeature.properties.popupContent+"<b>");
+
 
 // and add it to the map
-var testMarkerPink = L.AwesomeMarkers.icon({
-icon: 'play',
-markerColor: 'pink'
-});
+var testMarkerPink = L.AwesomeMarkers.icon({icon: 'play',markerColor: 'pink'});
 
 L.geoJSON(geojsonFeature, {
 pointToLayer: function (feature, latlng) {
