upload earthquake locations with custom icons

--- a/leafletGeoJSON2.html
+++ b/leafletGeoJSON2.html
@@ -1,9 +1,11 @@
 <html>
 <head>
+<title>Leaflet and Javascript Example</title>
 <!-- the following links add the CSS and Javascript required for the Leaflet Map -->
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.1.0/dist/leaflet.css"
 integrity="sha512-wcw6ts8Anuw10Mzh9Ytw4pylW8+NAD4ch3lqm9lzAsTxg0GFeJgoAtxuCLREZSC5lUXdVyo/7yfsqFjQ4S+aKw=="
 crossorigin=""/>
+
 <script src="https://unpkg.com/leaflet@1.1.0/dist/leaflet.js"
 integrity="sha512-mNqn2Wg7tSToJhvHcqfzLMU6J4mkOImSPTxVZAdo+lcPlk+GhZmYgACEe0x35K7YzW1zJ7XyJV/TT1MrdXvMcA=="
 crossorigin=""></script>
@@ -11,6 +13,12 @@ crossorigin=""></script>
 <style type="text/css">
 #mapid { height: 180px; }
 </style>
+<!-- 2-2-1 -->
+<!-- the following links incorporate the CSS required for custom icon creation -->
+<!--CSS should be added after linking the Leaflet map-->
+<link rel="stylesheet" href="ionicons.min.css">
+<link rel="stylesheet" href="leaflet.awesome-markers.css">
+<script src="leaflet.awesome-markers.js"></script>
 </head>
 <body>
 <!-- the mapid div will hold the map -->
@@ -64,6 +72,35 @@ mymap.fitBounds(earthquakelayer.getBounds());
 document.addEventListener('DOMContentLoaded', function() {
 getEarthquakes();
 }, false)
+
+var testMarkerRed = L.AwesomeMarkers.icon({icon: 'play',markerColor: 'red'});
+var testMarkerPink = L.AwesomeMarkers.icon({icon: 'play',markerColor: 'pink'});
+
+var earthquakelayer;
+function loadEarthquakelayer(earthquakedata) {
+// convert the text received from the server to JSON
+var earthquakejson = JSON.parse(earthquakedata );
+// load the geoJSON layer
+earthquakelayer = L.geoJson(earthquakejson,
+{
+// use point to layer to create the points
+pointToLayer: function (feature, latlng)
+{
+// look at the GeoJSON file - specifically at the properties - to see the earthquake magnitude and use a different marker depending on this value
+// also include a pop-up that shows the place value of the earthquakes
+if (feature.properties.mag > 1.75) {
+return L.marker(latlng, {icon:testMarkerRed}).bindPopup("<b>"+feature.properties.place
++"</b>");
+}
+else {
+// magnitude is 1.75 or less
+return L.marker(latlng, {icon:testMarkerPink}).bindPopup("<b>"+feature.properties.place
++"</b>");;
+}
+},
+}).addTo(mymap);
+mymap.fitBounds(earthquakelayer.getBounds());
+}
 
 </script>
 </body>
