--- a/MultipleLayers.html
+++ b/MultipleLayers.html
@@ -3,12 +3,10 @@
 <title>Leaflet and Javascript Example</title>
 <!-- the following links add the CSS and Javascript required for the Leaflet Map -->
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.1.0/dist/leaflet.css"
-integrity="sha512-
-wcw6ts8Anuw10Mzh9Ytw4pylW8+NAD4ch3lqm9lzAsTxg0GFeJgoAtxuCLREZSC5lUXdVyo/7yfsqFjQ4S+aKw=="
+integrity="sha512-wcw6ts8Anuw10Mzh9Ytw4pylW8+NAD4ch3lqm9lzAsTxg0GFeJgoAtxuCLREZSC5lUXdVyo/7yfsqFjQ4S+aKw=="
 crossorigin=""/>
 <script src="https://unpkg.com/leaflet@1.1.0/dist/leaflet.js"
-integrity="sha512-
-mNqn2Wg7tSToJhvHcqfzLMU6J4mkOImSPTxVZAdo+lcPlk+GhZmYgACEe0x35K7YzW1zJ7XyJV/TT1MrdXvMcA=="
+integrity="sha512-mNqn2Wg7tSToJhvHcqfzLMU6J4mkOImSPTxVZAdo+lcPlk+GhZmYgACEe0x35K7YzW1zJ7XyJV/TT1MrdXvMcA=="
 crossorigin=""></script>
 <!-- the following CSS is used to set the size of the Map -->
 <style type="text/css">
@@ -16,7 +14,38 @@ crossorigin=""></script>
 </style>
 <script>
 function loadEarthquakeData() {
-alert("load the data here");
+// call the getEarthquakes code
+// keep the alert message so that we know something is happening
+alert("Loading Earthquakes");
+getEarthquakes();
+}
+// create a variable that will hold the XMLHttpRequest() - this must be done outside a function so that all the functions can use the same variable
+var client;
+// create the code to get the Earthquakes data using an XMLHttpRequest
+function getEarthquakes() {
+client = new XMLHttpRequest();
+client.open('GET','https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/all_hour.geojson');
+client.onreadystatechange = earthquakeResponse; 
+// note don't use earthquakeResponse() with brackets as that doesn't work 
+client.send();
+}
+// create the code to wait for the response from the data server, and process the response once it is received
+function earthquakeResponse() {
+// this function listens out for the server to say that the data is ready - i.e. has state 4
+if (client.readyState == 4) {
+// once the data is ready, process the data
+var earthquakedata = client.responseText;
+loadEarthquakelayer(earthquakedata);
+}
+}
+// convert the received data - which is text - to JSON format and add it to the map
+function loadEarthquakelayer(earthquakedata) {
+// convert the text to JSON
+var earthquakejson = JSON.parse(earthquakedata);
+// add the JSON layer onto the map - it will appear using the default icons
+earthquakelayer = L.geoJson(earthquakejson).addTo(mymap);
+// change the map zoom so that all the data is shown
+mymap.fitBounds(earthquakelayer.getBounds());
 }
 </script>
 </head>
